post: fix misaligned start of code in preformatted text with line overflow

--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -110,6 +110,7 @@ pre
 	padding 1em
 	& code
 		background transparent
+		padding 0
 
 // Spoilers
 .md-spoiler-text
